[package]
name = "yarner-toc"
version = "0.1.1"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
readme = "README.md"
description = "A Yarner plugin to generate a Table of Content"
homepage = "https://github.com/mlange-42/yarner-toc/"
repository = "https://github.com/mlange-42/yarner-toc/"
license = "MIT"
edition = "2018"
exclude = [".github"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
yarner-lib = "0.5.2"
